# SingleCellAgent

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: examples.txt
examples/reports/: pbmc_marker_analysis_report.md
single-cell-agent/: __init__.py  __main__.py  agent.py  checks.py  cli.py  io.py  metadata.py  planning.py  reporting.py  tool_registry.py
single-cell-agent/tools/: markers.py  qc.py
